--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda-shop</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-    
-
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <p>this is  firast commit</p>
 </body>
 </html>
