--- a/index.html
+++ b/index.html
@@ -35,8 +35,91 @@
               </div>
             </div>
           </nav>
+
+          <!-- CAROSEL SECTION START-->
+          <section class="carosol my-5">
+              <div class="container">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                          <div class="row d-flex align-items-center bg-danger bg-opacity-10 p-5 rounded-3">
+                              <div class="col-md-7">
+                                <h1>Cool Dude Headphone</h1>
+                                <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                                <h1 class="text-danger">$420</h1>
+                                <button class="btn btn-danger">Buy Now</button>
+                              </div>
+                              <div class="col-md-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                              </div>
+                          </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="row d-flex align-items-center bg-danger bg-opacity-10 p-5 rounded-3">
+                            <div class="col-md-7">
+                              <h1>Cool Dude Headphone</h1>
+                              <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                              <h1 class="text-danger">$1200</h1>
+                              <button class="btn btn-danger">Buy Now</button>
+                            </div>
+                            <div class="col-md-5">
+                              <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="row d-flex align-items-center bg-danger bg-opacity-10 p-5 rounded-3">
+                            <div class="col-md-7">
+                              <h1>X-Box for your living room</h1>
+                              <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
+                              <h1 class="text-danger">$600</h1>
+                              <button class="btn btn-danger">Buy Now</button>
+                            </div>
+                            <div class="col-md-5">
+                              <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+              </div>
+          </section>
+          <!-- CAROSEL SECTION END-->
     </header>
     <!-- HEADER END -->
+
+    <!-- CATAGORIS SECTION START -->
+    <section class="container my-5">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="p-3 bg-primary rounded-3 d-flex align-items-center justify-content-between">
+                    <h1 class="text-white fw-bold">Watch</h1>
+                    <img class="img-fluid" src="images/categories/watch.png" width="120px" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="p-3 bg-info rounded-3 d-flex align-items-center justify-content-between">
+                    <h1 class="text-white fw-bold">Bag</h1>
+                    <img class="img-fluid" src="images/categories/bag.png" width="120px" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="p-3 bg-secondary rounded-3 d-flex align-items-center justify-content-between">
+                    <h1 class="text-white fw-bold">Shoes</h1>
+                    <img class="img-fluid" src="images/categories/shoes.png" width="120px" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- CATAGORIS SECTION END -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
