--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a class="nav-link active fw-bold" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link fw-bold" href="#shop">shope</a>
+                    <a class="nav-link fw-bold" href="#shoe">shope</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link fw-bold" href="#backpack">Backpack</a>
@@ -42,41 +42,47 @@
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                          <div class="row d-flex align-items-center bg-danger bg-opacity-10 p-5 rounded-3">
-                              <div class="col-md-7">
-                                <h1>Cool Dude Headphone</h1>
-                                <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
-                                <h1 class="text-danger">$420</h1>
-                                <button class="btn btn-danger">Buy Now</button>
-                              </div>
-                              <div class="col-md-5">
-                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
-                              </div>
+                          <div class="rounded-20 bg-danger bg-opacity-10 p-5">
+                            <div class="row d-flex align-items-center rounded-20">
+                                <div class="col-md-7">
+                                  <h1>Cool Dude Headphone</h1>
+                                  <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                                  <h1 class="text-danger">$420</h1>
+                                  <button class="btn btn-danger">Buy Now</button>
+                                </div>
+                                <div class="col-md-5">
+                                  <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
                           </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="row d-flex align-items-center bg-danger bg-opacity-10 p-5 rounded-3">
-                            <div class="col-md-7">
-                              <h1>Cool Dude Headphone</h1>
-                              <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
-                              <h1 class="text-danger">$1200</h1>
-                              <button class="btn btn-danger">Buy Now</button>
-                            </div>
-                            <div class="col-md-5">
-                              <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
-                            </div>
+                        <div class="rounded-20 bg-danger bg-opacity-10 p-5">
+                            <div class="row d-flex align-items-center">
+                                <div class="col-md-7">
+                                  <h1>Cool Dude Headphone</h1>
+                                  <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                                  <h1 class="text-danger">$1200</h1>
+                                  <button class="btn btn-danger">Buy Now</button>
+                                </div>
+                                <div class="col-md-5">
+                                  <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                                </div>
+                        </div>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="row d-flex align-items-center bg-danger bg-opacity-10 p-5 rounded-3">
-                            <div class="col-md-7">
-                              <h1>X-Box for your living room</h1>
-                              <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
-                              <h1 class="text-danger">$600</h1>
-                              <button class="btn btn-danger">Buy Now</button>
-                            </div>
-                            <div class="col-md-5">
-                              <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        <div class="rounded-20 bg-danger bg-opacity-10 p-5">
+                            <div class="row d-flex align-items-center">
+                                <div class="col-md-7">
+                                  <h1>X-Box for your living room</h1>
+                                  <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
+                                  <h1 class="text-danger">$600</h1>
+                                  <button class="btn btn-danger">Buy Now</button>
+                                </div>
+                                <div class="col-md-5">
+                                  <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                                </div>
                             </div>
                         </div>
                       </div>
@@ -98,21 +104,21 @@
 
     <!-- CATAGORIS SECTION START -->
     <section class="container my-5">
-        <div class="row">
+        <div class="row g-5">
             <div class="col-md-4">
-                <div class="p-3 bg-primary rounded-3 d-flex align-items-center justify-content-between">
+                <div class="p-3 bg-primary rounded-20 d-flex align-items-center justify-content-between">
                     <h1 class="text-white fw-bold">Watch</h1>
                     <img class="img-fluid" src="images/categories/watch.png" width="120px" alt="">
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="p-3 bg-info rounded-3 d-flex align-items-center justify-content-between">
+                <div class="p-3 bg-info rounded-20 d-flex align-items-center justify-content-between">
                     <h1 class="text-white fw-bold">Bag</h1>
                     <img class="img-fluid" src="images/categories/bag.png" width="120px" alt="">
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="p-3 bg-secondary rounded-3 d-flex align-items-center justify-content-between">
+                <div class="p-3 bg-secondary rounded-20 d-flex align-items-center justify-content-between">
                     <h1 class="text-white fw-bold">Shoes</h1>
                     <img class="img-fluid" src="images/categories/shoes.png" width="120px" alt="">
                 </div>
@@ -120,6 +126,117 @@
         </div>
     </section>
     <!-- CATAGORIS SECTION END -->
+
+    <!-- SHOES SECTION START -->
+    <section id="shoe" class="container my-5">
+        <h2 class="my-3">Shoes</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100 border-0 shadow-lg rounded-20">
+                <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Supply 350</h5>
+                  <p class="card-text my-1">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                  <h5 class="text-danger fw-bold">$120</h5>
+                </div>
+                <div class="m-3">
+                    <button class="btn btn-danger">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 border-0 shadow-lg rounded-20">
+                <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Nike 360</h5>
+                  <p class="card-text my-1">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <h5 class="text-danger fw-bold">$320</h5>
+                </div>
+                <div class="m-3">
+                    <button class="btn btn-danger">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 border-0 shadow-lg rounded-20">
+                <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Airmax</h5>
+                  <p class="card-text my-1">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                  <h5 class="text-danger fw-bold">$350</h5>
+                </div>
+                <div class="m-3">
+                  <button class="btn btn-danger">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
+    <!-- SHOES SECTION END -->
+
+    <!-- BACKPACK SECTION START -->
+    <section id="backpack" class="container my-5">
+        <h2 class="my-3">Backpack</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100 border-0 shadow-lg rounded-20">
+                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Laltu Bag</h5>
+                  <h5 class="text-danger fw-bold">$350</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="m-3">
+                    <button class="btn btn-danger">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 border-0 shadow-lg rounded-20">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Blue Niltu Bag</h5>
+                  <h5 class="text-danger fw-bold">$350</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="m-3">
+                    <button class="btn btn-danger">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 border-0 shadow-lg rounded-20">
+                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Black Kaltu Bag</h5>
+                  <h5 class="text-danger fw-bold">$169</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="m-3">
+                  <button class="btn btn-danger">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
+    <!-- BACKPACK SECTION END -->
+
+    <!-- SUBSCRIBE SECTION START -->
+    <section id="subscrib" style="height: 300px;" class="container d-flex justify-content-center align-items-center bg-danger bg-opacity-10 rounded-20 my-5">
+        <div class="p-3">
+            <h1>LET'S STAY IN TOUCH</h1>
+            <h5 class="fw-bold">Get updates on sales, specials and more</h5>
+            <input type="email" class="form-control my-3" name="" placeholder="Your Email" id="">
+            <button class="btn btn-danger">Subscrib Now</button>
+        </div>
+    </section>
+    <!-- SUBSCRIBE SECTION END -->
+
+    <!-- FOOTER SECTION START -->
+    <footer>
+        <p class="text-center text-muted">©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria</p>
+    </footer>
+    <!-- FOOTER SECTION END -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
